<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OtherActivityList">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/other_asset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Choose owned other assets: "
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_four_sub_21"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_22"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_23"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_24"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_25"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_26"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_27"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_28"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_29"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_30"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_31"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_32"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_33"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_34"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_35"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/other_asset_item_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_36"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/other_asset_item_17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_37"
            android:textSize="20sp" />
        <CheckBox
            android:id="@+id/other_asset_item_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_38"
            android:textSize="20sp" />

        <Button
            android:id="@+id/other_asset_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>