<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".FarmActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/farm_asset_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="Choose owned farm assets: "
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/question_four_sub_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_12"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_4"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_5"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_8"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_9"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_10"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_11"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_12"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_13"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_14"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/farm_asset_item_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_four_sub_15"
            android:textSize="20sp" />

        <Button
            android:id="@+id/farm_asset_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>