<?xml version="1.0" encoding="utf-8"?>
<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".EnvironmentalBenefitsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/basic_household_details_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="8dp"
            android:text="Basic HouseHold Details"
            android:textColor="#000000"
            android:textSize="40sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/eco_friendly_practices_before_tdf_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="32dp"
            android:text="@string/question_twentytwo_exists"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/basic_household_details_label"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/question_twentytwo_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentyone_2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_4"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_5"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_8"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_9"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eco_friendly_practices_after_tdf_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:layout_marginLeft="32dp"
            android:text="@string/question_twentytwo_increase"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/other_asset_item_9"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_1_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/question_twentytwo_1"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_2_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentyone_2"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_3_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_3"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_4_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_4"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_5_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_5"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_6_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_6"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_7_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_7"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_8_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_8"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/other_asset_item_9_after"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/question_twentytwo_9"
            android:textSize="20sp" />

        <Button
            android:id="@+id/other_asset_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="8dp"
            android:background="#000000"
            android:text="Submit"
            android:textColor="#ffffff" />

    </LinearLayout>
</ScrollView>